cli/tests/snapshots/integration__run_images@crop_align3.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="50.0" height="30.0" xmlns="http://www.w3.org/2000/svg">
  <defs><clipPath id="clip0" ><rect x="0.0" y="0.0" width="50.0" height="30.0" transform="rotate(0.0 25.0 15.0)" /></clipPath></defs>
  <g clip-path="url(#clip0)" >
    <path d="M 50.0 15.0 A 25.0 25.0 0.0 0 1 0.0 15.0 A 25.0 25.0 0.0 0 1 50.0 15.0 Z" fill="rgba(123, 104, 238, 1.0)" />
  </g>
</svg>
